[metadata]
name = 'pytorch-complex'
version = '0.0.1'
description = 'Complex tensor support for PyTorch'
author = 'Roger Luo'
author_email = 'rogerluo.rl18@gmail.com'
license = 'MIT'
url = 'https://github.com/Roger-luo/pytorch-complex'

[requires]
python_version = ['2.7', '3.5', '3.6', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
